Configuration:changes related to production